boulder/boulder/tests/compile_fail/hir/unknown_variable.bo
# Cannot find value `ab`
fn a(a: u32) -> u32 {
    ab
}